fixiign alignment for mobile

--- a/projects/angular-ngrx-material-starter/src/app/app/app.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/app/app.component.scss
@@ -5,6 +5,15 @@
   width: 100%;
 }
 
+.wrapper{
+  height: 100%;
+  .content{
+    height: 100%;
+  }
+  .container{
+    height: 100%;
+  }
+}
 
 
 .header-logo{
@@ -76,6 +85,7 @@ mat-sidenav-container {
     bottom: 0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 
     .content {
       flex: 1 0 auto;
