--- a/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/connect/connect/connect.component.scss
@@ -13,8 +13,6 @@ h2 {
 
 .background {
   position: relative;
-  height: 100vh;
-
   .actions {
     text-align: center;
     margin: 50px;
