--- a/projects/angular-ngrx-material-starter/src/app/features/present/present/present.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/present/present/present.component.scss
@@ -45,8 +45,6 @@ h2 {
 
 .background {
   position: relative;
-  height: 100vh;
-
   .actions {
     text-align: center;
     margin: 50px;
