--- a/projects/angular-ngrx-material-starter/src/app/features/welcome/welcome/welcome.component.scss
+++ b/projects/angular-ngrx-material-starter/src/app/features/welcome/welcome/welcome.component.scss
@@ -13,7 +13,6 @@ h2 {
 
 .background {
   position: relative;
-  height: 100vh;
 
   .actions {
     text-align: center;
